--- a/UI/TestMod.ui
+++ b/UI/TestMod.ui
@@ -30,6 +30,16 @@
         </rect>
        </property>
        <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>Creature</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
         <item row="0" column="1">
          <widget class="QLabel" name="label_2">
           <property name="text">
@@ -40,8 +50,15 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="1">
-         <widget class="QComboBox" name="comboBox_2"/>
+        <item row="0" column="2">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>Level</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
         </item>
         <item row="0" column="3">
          <widget class="QLabel" name="label_3">
@@ -53,57 +70,176 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="1">
-         <widget class="QComboBox" name="comboBox"/>
+        <item row="1" column="0">
+         <widget class="QComboBox" name="creatureComboBox"/>
         </item>
-        <item row="2" column="1">
-         <widget class="QComboBox" name="enemyComboBox"/>
+        <item row="1" column="1">
+         <widget class="QComboBox" name="enemyComboBox">
+          <item>
+           <property name="text">
+            <string>Barbabrian</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Fighter</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Ranger</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Rogue</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Wizard</string>
+           </property>
+          </item>
+         </widget>
         </item>
-        <item row="2" column="3">
-         <widget class="QSpinBox" name="roundSpinBox"/>
-        </item>
-        <item row="5" column="1">
-         <widget class="QComboBox" name="comboBox_3"/>
-        </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>Creature</string>
+        <item row="1" column="2">
+         <widget class="QSpinBox" name="spinBox">
+          <property name="minimum">
+           <number>1</number>
           </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
+          <property name="maximum">
+           <number>20</number>
           </property>
          </widget>
         </item>
-        <item row="2" column="0">
-         <widget class="QComboBox" name="creatureComboBox"/>
+        <item row="1" column="3">
+         <widget class="QSpinBox" name="roundSpinBox">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+         </widget>
         </item>
-        <item row="2" column="4">
+        <item row="1" column="4">
          <widget class="QPushButton" name="runTestButton">
           <property name="text">
            <string>Run Test!</string>
           </property>
          </widget>
         </item>
+        <item row="2" column="1">
+         <widget class="QComboBox" name="enemyComboBox_2">
+          <item>
+           <property name="text">
+            <string>Barbabrian</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Fighter</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Ranger</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Rogue</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Wizard</string>
+           </property>
+          </item>
+         </widget>
+        </item>
         <item row="2" column="2">
-         <widget class="QSpinBox" name="spinBox"/>
+         <widget class="QSpinBox" name="spinBox_2">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>20</number>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QComboBox" name="enemyComboBox_3">
+          <item>
+           <property name="text">
+            <string>Barbabrian</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Fighter</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Ranger</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Rogue</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Wizard</string>
+           </property>
+          </item>
+         </widget>
         </item>
         <item row="3" column="2">
-         <widget class="QSpinBox" name="spinBox_2"/>
+         <widget class="QSpinBox" name="spinBox_3">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>20</number>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="QComboBox" name="enemyComboBox_4">
+          <item>
+           <property name="text">
+            <string>Barbabrian</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Fighter</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Ranger</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Rogue</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Wizard</string>
+           </property>
+          </item>
+         </widget>
         </item>
         <item row="4" column="2">
-         <widget class="QSpinBox" name="spinBox_3"/>
-        </item>
-        <item row="5" column="2">
-         <widget class="QSpinBox" name="spinBox_4"/>
-        </item>
-        <item row="0" column="2">
-         <widget class="QLabel" name="label_4">
-          <property name="text">
-           <string>Level</string>
+         <widget class="QSpinBox" name="spinBox_4">
+          <property name="minimum">
+           <number>1</number>
           </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
+          <property name="maximum">
+           <number>20</number>
           </property>
          </widget>
         </item>
